# neogreet

./: BUILD.bazel  config.go  config_test.go  go.mod  go.sum  greeter.go  greeter_test.go  info.go  ipc.go  ipc_test.go  main.go  neogreet.yaml  ui.go  ui_test.go
examples/: README.md  config.toml  foot.ini  sway-config
